0.4.1:
Jens Vaasjo, Sam Lantinga, Nicholas Vining - Thu Aug  3 16:49:40 PDT 2000
 * Modified glmovie to do fullscreen hardware accelerated display
David Hedbor - Wed Aug  2 14:08:20 PDT 2000
 * Minor smpeg-config fixes for Solaris
Sam Lantinga - Wed Jun 21 14:58:24 PDT 2000
 * The MMX idct code resulted in much less quality, so disabled by default
Sam Lantinga - Thu Jun 15 00:07:33 PDT 2000
 * Added support for multiple tracks on a VCD disk
Vivien Chappelier - Wed Jun 14 12:43:54 PDT 2000
 * Added VCD and URL support to plaympeg

0.4.0:
Vivien Chappelier - Fri Jun  9 14:20:16 PDT 2000
 * Fixed rendering the final frame in a video stream
Hiroshi Yamashita - Thu Jun  8 12:03:42 PDT 2000
 * Fixed frame counter and FPS calculation after seek
 * Changed gtv so it actually changes the window size on doubling
Vivien Chappelier - Mon Jun  5 18:47:47 PDT 2000
 * Fixed audio synchronization when seeking in an MPEG stream
Sam Lantinga - Sat Jun  3 20:13:42 PDT 2000
 * Ported (easily) to BeOS
Sam Lantinga - Sat Jun  3 19:40:41 PDT 2000
 * Added aggresive optimizations by default, use --enable-debug to disable
Mo DeJong - Sat Jun  3 19:37:00 PDT 2000
 * Replaced target check for -lm with a simple library check
Sam Lantinga - Wed May 31 15:00:19 PDT 2000
 * Various gtv improvements - centered video, audio on by default, etc.
Robert Dean - Wed May 31 10:13:02 PDT 2000
 * Added drag-n-drop support to gtv (drag movies onto the control window)
Mo DeJong - Tue May 30 15:23:19 PDT 2000
 * Fixed an audio deadlock when stopping playback
Markus Overhumer - Tue May 30 15:16:30 PDT 2000
 * Some cleanups for compiling on Win32 with VC++
Vivien Chappelier - Fri May 26 10:53:44 PDT 2000
 * Added a movable progress slidebar to gtv
Vivien, Manuel - Wed May 17 17:36:39 PDT 2000
 * Added support for timestamp synchronization in the MPEG stream
Vivien, Damien - Mon May  8 11:06:08 PDT 2000
 * Added support for seeking in the MPEG stream
Sam Lantinga - Fri Apr 28 15:57:25 PDT 2000